Add PowerShell script for versioning and ZIP file creation
- Implemented a PowerShell script (pack-files.ps1) to automate the creation of a ZIP file containing all files and folders, excluding the "!versions" directory.
- The script automatically increments the version number in manifest.json using Semantic Versioning.
- Added functionality to log version history in a separate file (version_history.txt) within the "!versions" directory.
- Ensured error handling for missing manifest.json and invalid version formats.
- Created a temporary directory for file compression and cleaned up after the process.

--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,10 @@
   "manifest_version": 3,
   "name": "Volumify",
   "description": "Boost or reduce tab volume up to 1000% and fine-tune sound with EQ presets.",
-  "version": "1.0.1",
-  "permissions": [],
-  "host_permissions": ["<all_urls>"],
+  "version": "1.0.3",
+  "permissions": [
+    "activeTab"
+  ],
   "background": {
     "service_worker": "background.js"
   },
@@ -21,13 +22,6 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_idle"
-    }
-  ],
   "homepage_url": "https://jonasgrimm.de",
   "author": "Jonas Grimm",
   "minimum_chrome_version": "115"
